Version 1.7.0
[+] Everything works